adds some responsiveness

--- a/index.html
+++ b/index.html
@@ -133,27 +133,31 @@
 			<section class="projects" id="projectsSection">
 				<div class="projects__container">
 					<h2>Projects</h2>
-					<div class="projects__eso">
-						<img src="./images/eso-3.png" alt="" />
-						<h3>Elder Scrolls Online Alchemy app</h3>
-						<h4>Your trusty alchemy assistant for the world of Tamriel!</h4>
-						<p>
-							<span class="highlighted-skill">React</span>
-							• <span class="highlighted-skill">HTML/JSX</span> •
-							<span class="highlighted-skill">Tailwind</span> •
-							<span class="highlighted-skill">Javascript</span>
-						</p>
-						<p>
-							The ESO Alchemy app is the first web app I ever published and
-							makes use of React and Tailwind. It was a month-long project that
-							put into practice the skills I had learnt in the months leading
-							up. The app replicates the in-game alchemy system from the popular
-							online game Elder Scrolls Online, a game I often played at the
-							time.
-						</p>
-						<a href="https://alakaslam.io/alchemy_assistant"
-							>Click here to visit the app</a
-						>
+					<div class="projects__flex-display">
+						<div class="projects__eso">
+							<img
+								src="./images/eso-3.png"
+								alt="A screenshot of the main page from my ESO app"
+							/>
+							<a href="https://alakaslam.io/alchemy_assistant"
+								><h3>Elder Scrolls Online Alchemy app</h3></a
+							>
+							<h4>Your trusty alchemy assistant for the world of Tamriel!</h4>
+							<p>
+								<span class="highlighted-skill">React</span>
+								• <span class="highlighted-skill">HTML/JSX</span> •
+								<span class="highlighted-skill">Tailwind</span> •
+								<span class="highlighted-skill">Javascript</span>
+							</p>
+							<p>
+								The ESO Alchemy app is the first web app I ever published and
+								makes use of React and Tailwind. It was a month-long project
+								that put into practice the skills I had learnt in the months
+								leading up. The app replicates the in-game alchemy system from
+								the popular online game Elder Scrolls Online, a game I often
+								played at the time.
+							</p>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -162,12 +166,27 @@
 				<div class="contact__container">
 					<h2>Contact Me</h2>
 					<div class="contact__links">
-						<a href="https://github.com/encodexed" target="_blank">Github</a>
-						<a
-							href="https://www.linkedin.com/in/robbie-gollan-b05684261/"
-							target="_blank"
-							>LinkedIn</a
-						>
+						<p>You can find me by:</p>
+						<ul>
+							<li>
+								Github:
+								<a href="https://github.com/encodexed" target="_blank"
+									>https://github.com/encodexed</a
+								>
+							</li>
+							<li>
+								LinkedIn:
+								<a
+									href="https://www.linkedin.com/in/robbie-gollan-b05684261/"
+									target="_blank"
+									>https://www.linkedin.com/in/robbie-gollan-b05684261</a
+								>
+							</li>
+							<li>
+								Email:
+								<span style="font-weight: 200">robbiegollan@gmail.com</span>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</section>
