--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Proza+Libre:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="./styles/styles.css" />
