--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<main>
 			<section class="about" id="aboutSection">
 				<div class="about__container">
-					<h2>Hey, I'm Robbie</h2>
+					<h1>Hey, I'm Robbie</h1>
 					<div class="about__content">
 						<div class="about__content__img-container">
 							<img
@@ -74,7 +74,7 @@
 					<div class="skills__cards">
 						<div>
 							<h3>I'm great at...</h3>
-							<p>
+							<p class="skills__cards__highlighted-skills">
 								<span class="highlighted-skill">Javascript</span>
 								• <span class="highlighted-skill">HTML/JSX</span> •
 								<span class="highlighted-skill">CSS/Sass</span>
@@ -95,7 +95,7 @@
 						</div>
 						<div>
 							<h3>I'm getting better at...</h3>
-							<p>
+							<p class="skills__cards__highlighted-skills">
 								<span class="highlighted-skill">React</span>
 								• <span class="highlighted-skill">Express</span> •
 								<span class="highlighted-skill">SQL</span>
@@ -114,7 +114,7 @@
 						</div>
 						<div>
 							<h3>I'm learning...</h3>
-							<p>
+							<p class="skills__cards__highlighted-skills">
 								<span class="highlighted-skill">Typescript</span>
 								• <span class="highlighted-skill">Java</span>
 							</p>
@@ -135,21 +135,23 @@
 					<h2>Projects</h2>
 					<div class="projects__flex-display">
 						<div class="projects__eso">
-							<img
-								src="./images/eso-3.png"
-								alt="A screenshot of the main page from my ESO app"
-							/>
-							<a href="https://alakaslam.io/alchemy_assistant"
-								><h3>Elder Scrolls Online Alchemy app</h3></a
-							>
-							<h4>Your trusty alchemy assistant for the world of Tamriel!</h4>
-							<p>
-								<span class="highlighted-skill">React</span>
-								• <span class="highlighted-skill">HTML/JSX</span> •
-								<span class="highlighted-skill">Tailwind</span> •
-								<span class="highlighted-skill">Javascript</span>
-							</p>
-							<p>
+							<div class="projects__eso__headings">
+								<img
+									src="./images/eso-3.png"
+									alt="A screenshot of the main page from my ESO app"
+								/>
+								<a href="https://alakaslam.io/alchemy_assistant"
+									><h3>Elder Scrolls Online Alchemy app</h3></a
+								>
+								<h4>Your trusty alchemy assistant for the world of Tamriel!</h4>
+								<p class="projects__eso__highlighted-skills">
+									<span class="highlighted-skill">React</span>
+									• <span class="highlighted-skill">HTML/JSX</span> •
+									<span class="highlighted-skill">Tailwind</span> •
+									<span class="highlighted-skill">Javascript</span>
+								</p>
+							</div>
+							<p class="projects__eso__body-text">
 								The ESO Alchemy app is the first web app I ever published and
 								makes use of React and Tailwind. It was a month-long project
 								that put into practice the skills I had learnt in the months
@@ -164,29 +166,50 @@
 
 			<section class="contact" id="contactSection">
 				<div class="contact__container">
-					<h2>Contact Me</h2>
-					<div class="contact__links">
-						<p>You can find me by:</p>
-						<ul>
-							<li>
-								Github:
-								<a href="https://github.com/encodexed" target="_blank"
-									>https://github.com/encodexed</a
-								>
-							</li>
-							<li>
-								LinkedIn:
-								<a
-									href="https://www.linkedin.com/in/robbie-gollan-b05684261/"
-									target="_blank"
-									>https://www.linkedin.com/in/robbie-gollan-b05684261</a
-								>
-							</li>
-							<li>
-								Email:
-								<span style="font-weight: 200">robbiegollan@gmail.com</span>
-							</li>
-						</ul>
+					<div>
+						<h2>Contact Me</h2>
+						<div>
+							<p>You can get in touch by leaving a message below:</p>
+							<form
+								class="contact__form"
+								action="https://formspree.io/f/maygjgoo"
+								method="POST"
+							>
+								<div>
+									<label for="name"> Name: </label>
+									<input id="name" type="name" name="name" />
+								</div>
+								<div>
+									<label for="email"> Email: </label>
+									<input id="email" type="email" name="email" />
+								</div>
+								<div>
+									<label for="message"> Message: </label>
+								</div>
+								<textarea
+									id="message"
+									name="message"
+									cols="37"
+									rows="5"
+								></textarea>
+								<div>
+									<button type="submit">Send</button>
+								</div>
+							</form>
+						</div>
+						<div class="contact__links">
+							<p>Or you can find me at any of these locations:</p>
+							<ul>
+								<li>
+									<a href="https://github.com/encodexed/">Github </a>
+								</li>
+								<li>
+									<a href="https://www.linkedin.com/in/robbie-gollan-b05684261/"
+										>LinkedIn
+									</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</section>
